--- a/blog/2023_04_29_09_04_80_utteranc.es_might_be_interesting_for_the_blog.md
+++ b/blog/2023_04_29_09_04_80_utteranc.es_might_be_interesting_for_the_blog.md
@@ -5,7 +5,7 @@ Updated: 2023-04-29 16:55:31
 ---
 # Utteranc.es might be interesting for the blog
 
-Just found about this: https://utteranc.es/.
+Just found about this: https://utteranc.es/
 
 Since I plan to use my blog in with github pages, this might me interesting to get some comments, I will check if its possible to use how I plan.
 
